--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "public": {
     "default": {
       "commerce-core-endpoint": "https://www.aemshop.net/graphql",
-      "commerce-endpoint": "https://www.aemshop.net/cs-graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/GSnKiqpZtxHnpptoxJC6L9/graphql",
       "headers": {
         "all": {
           "Store": "default"
