--- a/config.json
+++ b/config.json
@@ -4,17 +4,12 @@
       "commerce-core-endpoint": "https://www.aemshop.net/graphql",
       "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/GSnKiqpZtxHnpptoxJC6L9/graphql",
       "headers": {
-        "all": {
-          "Store": "default"
-        },
         "cs": {
-          "Magento-Customer-Group": "b6589fc6ab0dc82cf12099d1c2d40ab994e8410c",
-          "Magento-Store-Code": "main_website_store",
-          "Magento-Store-View-Code": "default",
-          "Magento-Website-Code": "base",
-          "x-api-key": "4dfa19c9fe6f4cccade55cc5b3da94f7",
-          "Magento-Environment-Id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a"
-        }
+             "ac-view-id": "a53e62e4-9eb8-4769-bf86-81c2d7dd5f98",
+             "ac-price-book-id": "west_coast_inc",
+             "ac-source-locale": "en-US"
+           }
+         },
       },
       "analytics": {
         "base-currency-code": "USD",
