--- a/config.json
+++ b/config.json
@@ -11,7 +11,10 @@
           "ac-channel-id": "0d3eebf7-b5fb-4904-9ccf-f35fcc61862b",
           "ac-environment-id": "8idEEDDiVwjCEJAyB5kjfi",
           "ac-price-book-id": "west_coast_inc",
-          "ac-scope-locale": "en-US"
+          "ac-scope-locale": "en-US",
+          "Magento-Store-Code": "main_website_store",
+          "Magento-Store-View-Code": "default",
+          "Magento-Website-Code": "base",
         }
       },
       "analytics": {
