--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
           "ac-scope-locale": "en-US",
           "Magento-Store-Code": "main_website_store",
           "Magento-Store-View-Code": "default",
-          "Magento-Website-Code": "base",
+          "Magento-Website-Code": "base"
         }
       },
       "analytics": {
