--- a/config.json
+++ b/config.json
@@ -1,41 +1,36 @@
 {
   "public": {
     "default": {
-      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/8idEEDDiVwjCEJAyB5kjfi/graphql",
-      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/8idEEDDiVwjCEJAyB5kjfi/graphql",
+      "commerce-core-endpoint": "https://www.aemshop.net/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/GSnKiqpZtxHnpptoxJC6L9/graphql",
       "headers": {
         "all": {
           "Store": "default"
         },
         "cs": {
-          "ac-channel-id": "0d3eebf7-b5fb-4904-9ccf-f35fcc61862b",
-          "ac-environment-id": "8idEEDDiVwjCEJAyB5kjfi",
-          "ac-price-book-id": "west_coast_inc",
-          "ac-scope-locale": "en-US",
+          "Magento-Customer-Group": "b6589fc6ab0dc82cf12099d1c2d40ab994e8410c",
           "Magento-Store-Code": "main_website_store",
           "Magento-Store-View-Code": "default",
-          "Magento-Website-Code": "base"
+          "Magento-Website-Code": "base",
+          "x-api-key": "4dfa19c9fe6f4cccade55cc5b3da94f7",
+          "Magento-Environment-Id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a"
         }
       },
       "analytics": {
         "base-currency-code": "USD",
         "environment": "Production",
-        "environment-id": "8idEEDDiVwjCEJAyB5kjfi",
-        "store-code": "west_coast_inc",
         "store-id": 1,
-        "store-name": "ACO Store",
-        "store-url": "https://main--boilerplate-aco--adobe-commerce.aem.live",
-        "store-view-code": "default",
+        "store-name": "Main Website Store",
+        "store-url": "https://main--falcon-aco--ankit-jasani.aem.live",
         "store-view-id": 1,
         "store-view-name": "Default Store View",
-        "website-code": "default",
         "website-id": 1,
         "website-name": "Main Website"
       },
       "plugins": {
         "picker": {
-          "rootCategory": "2"
-        }
+           "rootCategory": "2"
+         }
       }
     }
   }
